reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__multiple_underscore_prefix_fields-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Underscored"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Underscored"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "bool": {
        "description": "Boolean value",
        "type": "boolean"
      },
      "reflectapi_demo.tests.serde.Underscored": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.Underscored",
        "required": [
          "___triple",
          "__double",
          "_single"
        ],
        "properties": {
          "___triple": {
            "$ref": "#/components/schemas/bool"
          },
          "__double": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "_single": {
            "$ref": "#/components/schemas/u32"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
